Support touch devices

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Explore dungeons!">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
