--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="description" content="Explore dungeons!"><meta name="viewport" content="width=device-width,user-scalable=no"><title>DrawNDice</title><link rel="icon" href="favicon.ico"></head><body><script src="vendors~main.253d6d76f7550411cbd2.js"></script><script src="main.eadaf62876e94a4f1091.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Explore dungeons!">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
+
+    <title>DrawNDice</title>
+<link rel="icon" href="favicon.ico"></head>
+<body>
+
+<script src="vendors~main.aa067dbf387d6de4d0f4.js"></script><script src="main.2caaf15e1003e4d5bb31.js"></script></body>
+</html>
