--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
 
     <title>DrawNDice</title>
-<link rel="icon" href="favicon.ico"></head>
+<link rel="icon" href="favicon.ico"><script defer src="vendors-node_modules_fortawesome_fontawesome-free_js_all_js-node_modules_msgpack_msgpack_dist-1a4cc9.70a1369c8ae200ae467c.js"></script><script defer src="main.7624beadc38377365d32.js"></script></head>
 <body>
 
-<script src="vendors~main.f6ddd4d9f3b473b57060.js"></script><script src="main.67352f6aeb0c8ea320f4.js"></script></body>
+</body>
 </html>
