[WIP] Battle system and bug fixes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="description" content="Explore dungeons!">
     <meta name="viewport" content="width=device-width,user-scalable=no">
+    <meta name="color-scheme" content="dark light">
 
     <title>Dndme!</title>
 
