--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico" />
     <meta name="description" content="Explore dungeons!">
     <meta name="viewport" content="width=device-width,user-scalable=no">
+    <meta name="color-scheme" content="dark light">
 
-    <title>DrawNDice</title>
-<link rel="icon" href="favicon.ico"><script defer src="vendors-node_modules_fortawesome_fontawesome-free_js_all_js-node_modules_bootstrap-vue_esm_in-b7fb82.f6c8a1da123b5bd14ab1.js"></script><script defer src="main.1e7f57e835fb5e78f6f2.js"></script></head>
+    <title>Dndme!</title>
+
+
+    
+  <script type="module" crossorigin src="/assets/index.cec62180.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.20904b82.js">
+  <link rel="stylesheet" href="/assets/index.3008959a.css">
+</head>
 <body>
 
+    <div id="vue-mount-point"></div>
+    
 </body>
 </html>
