--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/dndme/favicon.ico" />
     <meta name="description" content="Explore dungeons!">
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <meta name="color-scheme" content="dark light">
@@ -11,9 +11,9 @@
 
 
     
-  <script type="module" crossorigin src="/assets/index.cec62180.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.20904b82.js">
-  <link rel="stylesheet" href="/assets/index.3008959a.css">
+  <script type="module" crossorigin src="/dndme/assets/index.ba575744.js"></script>
+  <link rel="modulepreload" href="/dndme/assets/vendor.20904b82.js">
+  <link rel="stylesheet" href="/dndme/assets/index.3008959a.css">
 </head>
 <body>
 
