Add edit participants button in battle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Dndme!</title>
 
 
-    <link rel="stylesheet" href="/src/style.scss" />
+    <link rel="stylesheet" href="/src/style/style.scss" />
 </head>
 <body>
 
