--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
     
-  <script type="module" crossorigin src="/dndme/assets/index.e50e24b2.js"></script>
-  <link rel="stylesheet" href="/dndme/assets/index.24bcfcec.css">
-</head>
+  <script type="module" crossorigin src="/dndme/assets/index.8dbc21da.js"></script>
+  <link rel="stylesheet" href="/dndme/assets/index.f2e7bb34.css">
+<link rel="manifest" href="/dndme/manifest.webmanifest"></head>
 <body>
 
     <div id="vue-mount-point"></div>
